--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,26 @@
-body{
-    background-color: bisque;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f8f8f8;
+    text-align: center;
+}
+h1 {
+    color: #333;
+    font-size: 36px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+h3 {
+    color: #007bff;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+p {
+    color: #666;
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+img {
+    border-radius: 50%;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
 }
